subapp work 'layouts and directory'

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,4 +1,5 @@
 {% extends "template.njk" %}
+{% import "includes/macros/global.html" as macros %}
 
 {% from "accordion/macro.njk"        import govukAccordion %}
 {% from "back-link/macro.njk"        import govukBackLink %}
