--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,12 +21,11 @@
       <h2 class="govuk-heading-m">Prototypes</h2>
 
     <p>All prototypes are subject to change without notice. Please liaise with the Interaction Designer for more details.</p>
-<ul class="govuk-list govuk-list--bullet">
-  <li><a href="/test-1/">Test prototype</a></li>
-  <li><a href="/test-2/">Test prototype 2</a></li>
+    {{ macros.subapps_list(apps) }}
 
-</ul>
+
     </div>
 </div>
+
 
 {% endblock %}
