--- a/app/views/apps/fat-standard/index.html
+++ b/app/views/apps/fat-standard/index.html
@@ -15,7 +15,8 @@
 				{{ currentApp.title }}
 				<span class="govuk-caption-xl">Details of this prototype</span>
 			</h1>
-
+			<a href="{{ currentApp.urlPaths.appSubRoute }}/this.html">Test link</a>
+			
 			{% block description %}
 				<h2 class="govuk-heading-m">Description</h2>
 				<p>To add your own description edit: <span class="mono-inline">{{ currentApp.filePaths.subAppDir }}/index.html</span>. The contents of the 'description' block will be displayed here.<p>
