--- a/app/views/apps/fat-standard/layouts/default.html
+++ b/app/views/apps/fat-standard/layouts/default.html
@@ -11,6 +11,7 @@
 {% extends  "layout.html" %}
 
 {% block head %}
+<h1>ell world</h1>
 	{# swap out the default 'application.css' for this sub-application specific file #}
 	<link href="{{ currentApp.urlPaths.stylesPath + currentApp.config.cssFile | d('sub-application.css') }}" media="screen" rel="stylesheet" type="text/css" />
 {% endblock %}
