--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -1,6 +1,8 @@
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
-<!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
 
-{% for stylesheetUrl in extensionConfig.stylesheets %}
-  <link href="{{ stylesheetUrl }}" rel="stylesheet" type="text/css" />
-{% endfor %}
+<!-- {% block head %} -->
+	{# swap out the default 'application.css' for this sub-application specific file #}
+	<link href="/public/stylesheets{{ currentApp.urlPaths.stylesPath + currentApp.config.cssFile | d('sub-application.css') }}" media="screen" rel="stylesheet" type="text/css" />
+<!-- {% endblock %} -->
