--- a/app/views/apps/delivery-partner-0905/views/trackers/submit/start.html
+++ b/app/views/apps/delivery-partner-0905/views/trackers/submit/start.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-<div class="govuk-width-container">
+<div class="govuk-width-container" data-page-name="trackerSubmitJourneyLogic">
   <a href="#" class="govuk-back-link">Back</a>
 
 
-  <h1 class="govuk-heading-l">How would you prefer to submit your financial data?</h1>
+  <h1 class="govuk-heading-l">Choose how to submit financial data?</h1>
 
 
             <form>
@@ -18,14 +18,14 @@
               </legend>
               <div class="govuk-radios">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-1" name="where-do-you-live" type="radio" value="england">
+                  <input class="govuk-radios__input" id="where-do-you-live-1" name="choose-journey" type="radio" value="upload">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live-1">
-                    by upload a completed financial tracker spreadsheet
+                    upload a completed financial tracker spreadsheet
                   </label> </div>
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+                  <input class="govuk-radios__input" id="where-do-you-live-2" name="choose-journey" type="radio" value="online">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    by using the online submission service
+                    online submission service
                   </label> </div>
 
               </div>
