added an xlsx file for the tracker upload.

--- a/app/views/apps/delivery-partner-0905/index.html
+++ b/app/views/apps/delivery-partner-0905/index.html
@@ -18,31 +18,8 @@
 
 			{% block description %}
 				<h2 class="govuk-heading-m">Description</h2>
-				<p>To add your own description edit: <span class="mono-inline">{{ currentApp.filePaths.subAppDir }}/index.html</span>. The contents of the 'description' block will be displayed here.<p>
-				<h3 class="govuk-heading-s">For example</h3>
-				<p><div class="mono-block">
-					<div>
-					{% filter escape %}
-					{% raw %}
-					{% block description %}
-					{% endraw %}
-					{% endfilter %}
-					</div>
-					<div>
-					{% filter escape %}
-					{% raw %}
-						<p>Your content</p>
-					{% endraw %}
-					{% endfilter %}
-					</div>
-					<div>
-					{% filter escape %}
-					{% raw %}
-						{% endblock %}
-					{% endraw %}
-					{% endfilter %}
-					</div>
-				</div></p>
+				<p>This is a click through prototype of the delivery partner experience.</p>
+
 			{% endblock %}
 
 			<br>
@@ -53,16 +30,6 @@
 	    </div>
 	  </div>
 
-		<h3 class="heading-medium">Technical details</h3>
-
-		<ul class="list-bullet list-block">
-			<li>Node/Express routes file location: <span class="mono-inline">{{ currentApp.filePaths.routesFile }}</span></li>
-			<li>Sub-application configuration file is located: <span class="mono-inline">{{ currentApp.filePaths.configFile }}</span></li>
-			<li>'Sub application' specific data can be accessed in the templates with <span class="mono-inline">{% raw %}{{ currentApp }}{% endraw %}</span></li>
-			<li>Layouts are located: <span class="mono-inline">{{ currentApp.filePaths.layoutsDir }}</span></li>
-			<li>Session data can be accessed in the templates with <span class="mono-inline">{% raw %}{{ session }}{% endraw %}</span></li>
-			<li>'Post' data can be accessed in the templates with <span class="mono-inline">{% raw %}{{ postData }}{% endraw %}</span></li>
-		</ul>
 
 	</main>
 
