--- a/app/views/apps/beis-user-0905/assets/sass/sub-application.scss
+++ b/app/views/apps/beis-user-0905/assets/sass/sub-application.scss
@@ -412,9 +412,9 @@ p {
   color: $govuk-black;
 }
 
-tr#row-0 {
-  background-color: $govuk-red;
-  td {
-    color: $govuk-white;
-    }
-}
+// tr#row-0 {
+//   background-color: $govuk-red;
+//   td {
+//     color: $govuk-white;
+//     }
+// }
