--- a/app/views/apps/beis-user-0905/views/programmes/add/index.html
+++ b/app/views/apps/beis-user-0905/views/programmes/add/index.html
@@ -136,12 +136,28 @@
 </div>
 
       <div class="govuk-form-group">
-  <label class="govuk-label" for="sort">
+  <label class="govuk-label" for="aidType">
     Aid type
   </label>
-  <select class="govuk-select">
-    <option value="published">E01</option>
-    <option value="updated">Other technical assistance</option>
+  <select class="govuk-select" id="aidType">
+    <option value="a01">A01</option>
+    <option value="a02">A02</option>
+    <option value="b01">B01</option>
+    <option value="b02">B02</option>
+    <option value="b03">B03</option>
+    <option value="b04">B04</option>
+    <option value="c01">C01</option>
+    <option value="d01">D01</option>
+    <option value="d02">D02</option>
+    <option value="e01">E01</option>
+    <option value="e02">E02</option>
+    <option value="f01">F01</option>
+    <option value="g01">G01</option>
+    <option value="h01">H01</option>
+    <option value="h02">H02</option>
+    <option value="h03">H03</option>
+    <option value="h04">H04</option>
+    <option value="h05">H05</option>
   </select>
 </div>
 
