--- a/app/views/apps/beis-user-0905/views/trackers/submit/data-table/input.html
+++ b/app/views/apps/beis-user-0905/views/trackers/submit/data-table/input.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="govuk-width-container" data-page-name="submitDataTable">
+<div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
   <div class="govuk-error-summary hide" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
@@ -25,14 +25,14 @@
     <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
 
-    <div class="js-accordion-with-descriptions" data-module="accordion-with-descriptions"><div class="subsection-controls js-subsection-controls"></div>
+    <div class="js-accordion-with-descriptions" data-module="accordion-with-descriptions"><div class="subsection-controls js-subsection-controls"><button aria-expanded="false" aria-controls="subsection_content_0 subsection_content_1 ">Open all</button></div>
         <div class="subsection-wrapper">
             <div class="js-subsection subsection--is-open">
                 <div class="subsection__header">
                     <h2 class="subsection__title"><button class="subsection__button js-subsection-button" aria-expanded="true" aria-controls="subsection_content_0">Climate Investment Funds</button></h2>
                 <span class="subsection__icon"></span></div>
                 <div class="subsection__content js-subsection-content" id="subsection_content_0">
-                  <div id="jexcel-0" class="jexcel"></div>
+                  <div id="jexcel-1"></div>
 
                 </div>
             </div>
@@ -43,14 +43,14 @@
                     <h2 class="subsection__title"><button class="subsection__button js-subsection-button" aria-expanded="true" aria-controls="subsection_content_0">Climate Public Private Partnership (CP3) Platform</button></h2>
                 <span class="subsection__icon"></span></div>
                 <div class="subsection__content js-subsection-content hide" id="subsection_content_0">
-                  <div id="jexcel-1" class="jexcel"></div>
+                  <div id="jexcel-2"></div>
                 </div>
             </div>
         </div>
     </div>
     <br>
     <br>
-    <a href="success.html" class="govuk-button">Continue</a>
+    <a class="govuk-button">Continue</a>
 
             </div>
 
