--- a/app/views/apps/beis-user-0905/views/trackers/submit/data-table/start.html
+++ b/app/views/apps/beis-user-0905/views/trackers/submit/data-table/start.html
@@ -3,21 +3,29 @@
 {% block content %}
 <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Upload financial tracker file</h1>
+        <h1 class="govuk-heading-xl">Submit ODA financial data</h1>
           <p class="govuk-body-lead">Use this service to report your ODA financial data to BEIS.</p>
         <h2 class="govuk-heading-m">Before you start</h2>
         <ul class="govuk-list govuk-list--bullet">
-          <li>download the latest tracker spreadsheet template</li>
-          <li>review the guidance on how to complete the spreadsheet</li>
-          <li>populate the spreadsheet with your data</li>
+          <li>make </li>
+          <ul>
+            <li>cash figures</li>
+            <li>cash forecast for the next quarter</li>
+            <li>accrual for the next quarter</li>
+            </ul>
         </ul>
 
         <h2 class="govuk-heading-m">What you need</h2>
         <ul class="govuk-list govuk-list--bullet">
-          <li>a complete spreadsheet for the fiancial period you are reporting on</li>
+          <li>have the activity data you need to report on:</li>
+          <ul>
+            <li>cash figures</li>
+            <li>cash forecast for the next quarter</li>
+            <li>accrual for the next quarter</li>
+            </ul>
         </ul>
 
-        <a href="upload.html" class="govuk-button govuk-button--start">Start</a>
+        <a href="input.html" class="govuk-button govuk-button--start">Start</a>
         </div>
         <div class="govuk-grid-column-one-third">
           <div class="app-help-panel">
