--- a/app/views/apps/beis-user-0905/views/trackers/submit/file-upload/upload.html
+++ b/app/views/apps/beis-user-0905/views/trackers/submit/file-upload/upload.html
@@ -30,7 +30,7 @@
     </label>
     <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
   </div>
-         <a href="verify-errors.html" class="govuk-button govuk">Submit</a>
+         <a href="choose-journey.html" class="govuk-button govuk">Submit</a>
   </form>
 
 
