--- a/app/views/apps/delivery-partner-0905/views/trackers/submit/file-upload/start.html
+++ b/app/views/apps/delivery-partner-0905/views/trackers/submit/file-upload/start.html
@@ -26,7 +26,7 @@
               <li>the ODA reporting spreadsheet, a guide</li>
               <li>BEIS underlying data requirements</li>
             </ul>
-            <a href="odaTracker.xls" class="govuk-button govuk-button--secondary">Download ODA tracker spreadsheet</a>
+            <a href="/public/assets/oda-tracker-01-08052019.xlsx" class="govuk-button govuk-button--secondary">Download ODA tracker spreadsheet</a>
         </div>
         </div>
   </div>
