--- a/app/views/apps/beis-user-0905/views/dashboard.html
+++ b/app/views/apps/beis-user-0905/views/dashboard.html
@@ -7,7 +7,7 @@
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
-            <h1 class="govuk-heading-xl">Submit your ODA financial data dashboard</h1>
+            <h1 class="govuk-heading-xl">Review ODA financial data dashboard</h1>
             <p class="govuk-body-lead">Use this page to navigate to the goals you need to accomplish.</p>
           </div>
     </div>
@@ -17,9 +17,25 @@
      <div class="govuk-grid-column-one-third">
        <h2 class="govuk-heading-m">Programmes and activities</h2>
        <ul class="govuk-list govuk-list--links">
-         <li><a href="programmes/add/start">Add a programme</a>
-         <li><a href="programmes/">Programmes and activities</a></li>
+         <li><a href="#">Add a programme</a>
+         <li><a href="#">Programmes and activities</a></li>
        </ul>
+             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+             <h2 class="govuk-heading-m">Trackers</h2>
+             <p class="govuk-body">Review inbound financial trackers.</p>
+             <ul class="govuk-list govuk-list--links">
+               <li><a href="tracker-review/index">This period's financial trackers</a>
+               <!-- <li><a href="#">Approve a tracker</a> -->
+               <li><a href="trackers/">View previous submissions</a></li>
+             </ul>
+             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+             <h2 class="govuk-heading-m">Reports</h2>
+             <p class="govuk-body">Generate financial reports based on submitted tracker data</p>
+             <ul class="govuk-list govuk-list--links">
+               <li><a href="trackers/submit/start">Generate an IATI xml report</a>
+               <li><a href="trackers/submit/start">View all reports</a>
+               <!-- <li><a href="#">Approve a tracker</a> -->
+             </ul>
      </div>
 
      <div class="govuk-grid-column-one-third">
@@ -29,20 +45,18 @@
                <li><a href="#">View existing users</a>
              </ul>
              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-             <h2 class="govuk-heading-m">Financial trackers</h2>
-             <p class="govuk-body">All your reporting data lives here.</p>
+             <h2 class="govuk-heading-m">Manage delivery partners</h2>
              <ul class="govuk-list govuk-list--links">
-               <li><a href="trackers/submit/start">Submit a new tracker</a>
-               <!-- <li><a href="#">Approve a tracker</a> -->
-               <li><a href="trackers/">View previous submissions</a></li>
+               <li><a href="#">Create a new delivery partner account</a></li>
+               <li><a href="#">View existing delivery partners</a>
              </ul>
        </div>
        <div class="govuk-grid-column-one-third panel-blue">
          <h3 class="govuk-heading-m">To do list</h3>
          <p class="govuk-body">Activies that need you attention</p>
          <ol class="govuk-list govuk-list--number">
-           <li>Add tracker data for Q3 2019</li>
-           <li>Accept pending invitations</li>
+           <li>Approve tracker data for Q2 2019</li>
+           <li>Download IATI xml transparency report</li>
          </ol>
        </div>
      </div>
