--- a/app/views/apps/beis-user-0905/views/index.html
+++ b/app/views/apps/beis-user-0905/views/index.html
@@ -8,15 +8,16 @@
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
         <h1 class="govuk-heading-xl">
-          Submit your ODA financial data
+          Review ODA financial data
               </h1>
-  <p>This service is for organisations that receive ODA funding.</p>
+  <p>This service is for BEIS employees that handle ODA funding.</p>
   <p>Use this service to:</p>
 
           <ul class="govuk-list govuk-list--bullet">
               <li>report cash spending on activities</li>
               <li>report forecast spending on activities</li>
               <li>report accruals on activites</li>
+              <li>submit IATI reports</li>
               <!--<li>your Companies House number - <a href="https://beta.companieshouse.gov.uk/search/" rel="external">find my Companies House number</a></li>-->
           </ul>
       </div>
