--- a/app/views/apps/delivery-partner-0905/views/programmes/index.html
+++ b/app/views/apps/delivery-partner-0905/views/programmes/index.html
@@ -27,6 +27,7 @@
       <th class="govuk-table__header" scope="col">Activity count</th>
       <th class="govuk-table__header" scope="col">Principal investigator</th>
       <th class="govuk-table__header" scope="col"></th>
+      <th class="govuk-table__header" scope="col"></th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
@@ -37,22 +38,24 @@
       <td class="govuk-table__cell">Live</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">£2,500,000</td>
       <td class="govuk-table__cell">01 Jan 2018 - 31 Oct 2020</td>
-      <td class="govuk-table__cell govuk-table__cell--numeric">15</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <!-- <td class="govuk-table__cell">Multilateral World Bank-administered funds to help developing countries pilot low-carbon, climate-resilient pathways. This is funded by both the Department for International Development and the Department of Enegry and Climate Change (DECC). This refers only to the DECC spend.</td> -->
       <td class="govuk-table__cell">Kai Moon</td>
       <td class="govuk-table__cell"><a href="details.html">Details</a></td>
+      <td class="govuk-table__cell"><a href="details.html">Activities</a></td>
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__cell" scope="row">Climate Investment Funds</th>
+      <th class="govuk-table__cell" scope="row">Forestry investigation fund</th>
       <td class="govuk-table__cell" scope="row">GB-GOV-13-91116</td>
       <td class="govuk-table__cell" scope="row">Newton</td>
       <td class="govuk-table__cell">Live</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">£2,500,000</td>
       <td class="govuk-table__cell">01 Jan 2018 - 31 Oct 2020</td>
-      <td class="govuk-table__cell govuk-table__cell--numeric">15</td>
+      <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <!-- <td class="govuk-table__cell">Multilateral World Bank-administered funds to help developing countries pilot low-carbon, climate-resilient pathways. This is funded by both the Department for International Development and the Department of Enegry and Climate Change (DECC). This refers only to the DECC spend.</td> -->
       <td class="govuk-table__cell">Dr Jeung-Lee</td>
       <td class="govuk-table__cell"><a href="details.html">Details</a></td>
+      <td class="govuk-table__cell"><a href="details.html">Activities</a></td>
     </tr>
   </tbody>
 </table>
