--- a/app/views/apps/beis-user-0905/views/dashboard.html
+++ b/app/views/apps/beis-user-0905/views/dashboard.html
@@ -15,10 +15,10 @@
    </div>
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-one-third">
-       <h2 class="govuk-heading-m">Programmes and activities</h2>
+       <h2 class="govuk-heading-m">Programmes</h2>
        <ul class="govuk-list govuk-list--links">
          <li><a href="#">Add a programme</a>
-         <li><a href="#">Programmes and activities</a></li>
+         <li><a href="#">Programmes</a></li>
        </ul>
              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
              <h2 class="govuk-heading-m">Trackers</h2>
@@ -33,7 +33,7 @@
              <p class="govuk-body">Generate financial reports based on submitted tracker data</p>
              <ul class="govuk-list govuk-list--links">
                <li><a href="trackers/submit/start">Generate an IATI xml report</a>
-               <li><a href="trackers/submit/start">View all reports</a>
+               <li><a href="reports/index.html">View ODA reports</a>
                <!-- <li><a href="#">Approve a tracker</a> -->
              </ul>
      </div>
