--- a/app/views/apps/beis-user-0905/views/tracker-review/details.html
+++ b/app/views/apps/beis-user-0905/views/tracker-review/details.html
@@ -35,7 +35,7 @@
                   <h2 class="subsection__title">Nationally Appropriate Mitigating Actions Facility	</h2>
               </div>
               <div class="subsection__content js-subsection-content" id="subsection_content_0">
-                <table class="govuk-table govuk-table--small">
+                <table class="govuk-table govuk-table--small projectReviewTable">
 
                   <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
@@ -135,7 +135,7 @@
                   <h2 class="subsection__title">Forests Carbon Partnership Facility	</h2>
               </div>
               <div class="subsection__content js-subsection-content" id="subsection_content_1">
-                <table class="govuk-table govuk-table--small">
+                <table class="govuk-table govuk-table--small projectReviewTable">
 
                   <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
@@ -234,7 +234,7 @@
   </div>
   <br>
   <br>
-  <a class="govuk-button">Continue to approval</a>
+  <a href="approve-user-journey" class="govuk-button">Complete review</a>
 
           </div>
 
