tweaks to ui for ur session 1

--- a/app/views/apps/beis-user-0905/views/dashboard.html
+++ b/app/views/apps/beis-user-0905/views/dashboard.html
@@ -32,7 +32,7 @@
              <h2 class="govuk-heading-m">Reports</h2>
              <p class="govuk-body">Generate financial reports based on submitted tracker data</p>
              <ul class="govuk-list govuk-list--links">
-               <li><a href="trackers/submit/start">Generate an IATI xml report</a>
+               <li><a href="reports/iati-user-journey.html">Generate an IATI xml report</a>
                <li><a href="reports/index.html">View ODA reports</a>
                <!-- <li><a href="#">Approve a tracker</a> -->
              </ul>
