--- a/app/views/apps/beis-user-0905/views/tracker-review/details.html
+++ b/app/views/apps/beis-user-0905/views/tracker-review/details.html
@@ -44,7 +44,7 @@
                       <th class="govuk-table__header" scope="col" colspan="2"></th>
                     </tr>
                     <tr class="govuk-table__row">
-                      <th class="govuk-table__header" scope="col"><i class="fa fa-flag"></i></th>
+                      <th class="govuk-table__header" scope="col"></th>
                       <th class="govuk-table__header" scope="col">Activity</th>
                       <!-- <th class="govuk-table__header" scope="col">ID</th> -->
                       <th class="govuk-table__header" scope="col">Status</th>
@@ -144,7 +144,7 @@
                       <th class="govuk-table__header" scope="col" colspan="2"></th>
                     </tr>
                     <tr class="govuk-table__row">
-                      <th class="govuk-table__header" scope="col"><i class="fa fa-flag"></i></th>
+                      <th class="govuk-table__header" scope="col"></th>
                       <th class="govuk-table__header" scope="col">Activity</th>
                       <!-- <th class="govuk-table__header" scope="col">ID</th> -->
                       <th class="govuk-table__header" scope="col">Status</th>
