--- a/app/views/apps/beis-user-0905/views/tracker-review/index.html
+++ b/app/views/apps/beis-user-0905/views/tracker-review/index.html
@@ -8,7 +8,7 @@
   <main class="govuk-main-wrapper">
     <h1 class="govuk-heading-xl">Financial trackers</h1>
     <p class="govuk-body-lead">View tracker submission status and review data quality.</p>
-    <a class="govuk-button govuk-button-disabled" href="submit/start.html">Download IATI xml</a>
+    <a class="govuk-button govuk-button-disabled" href="../reports/iati-user-journey.html">Download IATI xml</a>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <div class="govuk-caption-m">This period's deadline</div>
@@ -53,17 +53,17 @@
       <td class="govuk-table__cell" scope="row">Met Office</td>
       <td class="govuk-table__cell" scope="row">Returned to delivery partner</td>
       <td class="govuk-table__cell">--</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details"></a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">British Council</td>
       <td class="govuk-table__cell" scope="row">Not yet received</td>
       <td class="govuk-table__cell">--</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details"></a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Academy of Medical Sciences</td>
-      <td class="govuk-table__cell" scope="row">Approved</td>
+      <td class="govuk-table__cell" scope="row">Pending review</td>
       <td class="govuk-table__cell govuk-warning__cell"><div id="warning-1">Under budget</div>-£60,000</td>
       <td class="govuk-table__cell"><a href="details">Review</a></td>
     </tr>
@@ -71,121 +71,121 @@
       <td class="govuk-table__cell" scope="row">Innovate UK (TSB)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">RCUK</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell govuk-error__cell"><div id="warning-1">Over budget</div>+£150,000</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Royal Academy of Engineering (RAEng)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Royal Society</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Academy of Medical Sciences</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Arts and Humanities Research Council (AHRC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Biotechnology and Biological Sciences Research Council (BBSRC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Economic and Social Research Council (ESRC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Engineering and Physical Sciences Research Council (EPSRC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Higher Education Funding Council for England (HEFCE)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Higher Education Funding Council for Wales (HEFCW)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Medical Research Council (MRC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Natural Environment Research Council (NERC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Northern Ireland Executive</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Research Councils UK (RCUK)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Royal Academy of Engineering</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Royal Society</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Science and Technology Facilities Council (STFC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">Scottish Funding Council (SFC)</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">UK Space Agency</td>
       <td class="govuk-table__cell" scope="row">Approved</td>
       <td class="govuk-table__cell">£0</td>
-      <td class="govuk-table__cell"><a href="details">Review</a></td>
+      <td class="govuk-table__cell"><a href="details">Details</a></td>
     </tr>
 
   </tbody>
