--- a/app/views/apps/delivery-partner-0905/views/programmes/index.html
+++ b/app/views/apps/delivery-partner-0905/views/programmes/index.html
@@ -6,8 +6,8 @@
   <a href="#" class="govuk-back-link">Back</a>
 
   <main class="govuk-main-wrapper">
-    <h1 class="govuk-heading-xl">Programmes and activities</h1>
-    <p class="govuk-body-lead">Manage and add new programmes and activities to your organisation's report</p>
+    <h1 class="govuk-heading-xl">Projects and activities</h1>
+    <p class="govuk-body-lead">Manage and add new projects and activities to your organisation's report</p>
     <a class="govuk-button" href="add/start.html">Add a programme</a>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
@@ -17,8 +17,8 @@
 
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Programme name</th>
-      <th class="govuk-table__header" scope="col">Programme ID</th>
+      <th class="govuk-table__header" scope="col">Project name</th>
+      <th class="govuk-table__header" scope="col">Project ID</th>
       <th class="govuk-table__header" scope="col">Fund</th>
       <th class="govuk-table__header" scope="col">Status</th>
       <th class="govuk-table__header" scope="col">Budet</th>
